--- a/slnAllShow/prjAllShow.Backend/Views/_ViewImports.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/_ViewImports.cshtml
@@ -1,1 +1,8 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using prjAllShow.Backend
+@using prjAllShow.Backend.Models
+@using prjAllShow.Backend.Models.Identity
+
+@using Microsoft.AspNetCore.Mvc.Localization
+@using prjAllShow.Backend.Resources
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
