--- a/slnAllShow/prjAllShow.Backend/Views/Shared/_Layout.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject IHtmlLocalizer<SharedResources> _localizer
+
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -22,6 +24,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                     @await Html.PartialAsync("_LoginPartial"); 
                 </div>
             </div>
         </nav>
@@ -34,8 +37,13 @@
     </div>
 
     <footer class="border-top text-muted ">
-        <div class="container mt-3">
-            &copy; @DateTime.Now.Year - 系統維護建置by <a href="#">XXX</a>
+        <div class="row">
+            <div class="col-md-6">
+                &copy; @DateTime.Now.Year - @_localizer["SysBulidBy"] <a href="#">XXX</a>
+            </div>
+            <div class="col-md-6 text-right">
+                @await Html.PartialAsync("_SelectLanguagePartial")
+            </div>
         </div>
     </footer>
 
