--- a/slnAllShow/prjAllShow.Backend/Views/Home/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Home/Index.cshtml
@@ -6,3 +6,15 @@
 
 @*<a href="@Url.Action("Login","Account")">@_localizer["Register.Login"]</a>
 <a href="@Url.Action("Register","Account")">@_localizer["Register.Title"]</a>*@
+
+<div class="col-12 col-md-8 mb-2">
+    <div class="card" style="width:100%;">
+        <img class="card-img-top" src="~/Images/fPage.png" style="height:600px" />
+        <div class="card-body">
+            <h5 class="card-title">這是首頁</h5>
+            <p class="card-text text-secondary">系統管理者：我</p>
+            <p class="card-text text-secondary">Email：別找我</p>
+            <p class="card-text text-secondary">Phone Number：別找我</p>            
+        </div>
+    </div>
+</div>
