--- a/slnAllShow/prjAllShow.Backend/Views/_ViewImports.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using prjAllShow.Backend
 @using prjAllShow.Backend.Models
 @using prjAllShow.Backend.Models.Identity
+@using prjAllShow.Backend.Models.ViewModels
 
 @using Microsoft.AspNetCore.Mvc.Localization
 @using prjAllShow.Backend.Resources
