參考ASP.net Core API 分層設計

--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/_ViewImports.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
-﻿@using prjAllShow.Backend
-@using prjAllShow.Backend.Models
-@using prjAllShow.Backend.Models.Identity
-@using prjAllShow.Backend.Models.ViewModels
+﻿@using AllShow
+@using AllShow.Models
+@using AllShow.Models.Identity
+@using AllShow.Models.ViewModels
 
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
