調整Employee，設定廠商註冊時是一般使用者Customer，模擬信件確認後開啟商店功能Factory has shop

--- a/slnAllShow/prjAllShow.Backend/Views/Shared/_LayoutAdmin.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Shared/_LayoutAdmin.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Admin"  asp-controller="Employee" asp-action="Index">員工管理</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin"  asp-controller="Shop" asp-action="Index">商店管理</a>
+                        </li>
                     </ul>               
                 </div>
             </div>
