--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/_ViewImports.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,5 +3,7 @@
 @using AllShow.Models.Identity
 @using AllShow.Models.ViewModels
 
+@using AllShowDTO
+
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
