--- a/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Employee/Edit.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Areas/Admin/Views/Employee/Edit.cshtml
@@ -44,6 +44,7 @@
                 @Html.HiddenFor(m => m.EmpEmail)
             </div>
             <div class="form-group">
+                <label asp-for="EmpSex" class="control-label"></label>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" id="EmpSex1" name="EmpSex" value="0" 
                   @if(Model.EmpSex=="0")
@@ -85,6 +86,7 @@
                 <span asp-validation-for="LeaveDate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="EmpAccountState" class="control-label"></label>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" id="EmpAccountState1" name="EmpAccountState" value="0"
                   @if(Model.EmpAccountState=="0")
