WebAPI 加入JWT，透過api/GetAuth/authentication的email和password去比對DB得到token，再測試PostMan header 加入Authorization+Bearer token 後呼叫api/Test去取得UserDTO的List資料

--- a/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
@@ -27,13 +27,15 @@
 </div>
 
 <script>
+    var apiUrl='https://localhost:7154/WeatherForecast';
+    //var apiUrl='https://localhost:44393/WeatherForecast';
     new Vue({
         el: '#app',
         data: {
             WeatherList: null
         },
         mounted() {
-            baseInstance.get('http://localhost:5154/WeatherForecast')
+            baseInstance.get(apiUrl)
                 .then(response => {
                     this.WeatherList = response.data;
                 });
