--- a/slnAllShow/prjAllShow.Backend/Views/Shared/_LayoutAdmin.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Shared/_LayoutAdmin.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Admin"  asp-controller="Member" asp-action="Index">會員管理</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area=""  asp-controller="Test" asp-action="Index">測試JWT</a>
+                        </li>
                     </ul>               
                 </div>
             </div>
