修改註冊方式讓密碼規則能啟用

--- a/slnAllShow/prjAllShow.Backend/Views/Account/Register.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Account/Register.cshtml
@@ -36,6 +36,10 @@
         </div>
     </div>
 }
+<div>
+    <span class="text-danger">@ViewBag.ShowErrorMsg</span>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
