--- a/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
@@ -5,9 +5,7 @@
 }
 
 <h1>Test WeatherForecast</h1>
-<form method="post">
-    <!-- form markup -->
-</form>
+
 <div id="app">
     <button v-on:click="GetAuth()" class="btn btn-warning">驗證</button>
     <button v-on:click="CheckAuth()" class="btn btn-primary">重新檢查</button>
@@ -23,7 +21,7 @@
         </thead>
         <tbody>
             <tr v-for="(item,index) in WeatherList">
-                <td>{{item.date}}</td>
+                <td>{{item.date | dateFormat('YYYY-MM-DD')}}</td>
                 <td>{{item.temperatureC}}</td>
                 <td>{{item.temperatureF}}</td>
                 <td>{{item.summary}}</td>
@@ -34,7 +32,7 @@
 
 <script>
     var authUrl='api/GetAuth';
-    var apiUrl='@(_config.GetSection("WebAPIUrl").Value)WeatherForecast';
+    var apiUrl='@(_config.GetSection("WebAPIUrl").Value)/WeatherForecast';
     var apiCheck='/api/GetAuth/checktokenvalid';
     //var apiUrl='https://localhost:44393/WeatherForecast';
     new Vue({
@@ -43,31 +41,10 @@
             WeatherList: null
         },      
         mounted() {
-            //baseInstance.get(apiUrl)
-            //    .then(response => {
-            //        this.WeatherList = response.data;
-            //    });
-            const defaultOptions = {
-                baseURL: apiUrl,
-                headers: {
-                  'Content-Type': 'application/json',
-                },
-            };
-
-            // Create instance
-            let instance = axios.create(defaultOptions);
-
-            // Set the AUTH token for any request
-            instance.interceptors.request.use(function (config) {
-                const token = window.localStorage.getItem("token");
-                config.headers.Authorization =  token ? `Bearer ${token}` : '';
-                return config;
+            baseInstance.get(apiUrl)
+            .then(response => {
+                this.WeatherList = response.data;
             });
-
-            instance.get(apiUrl)
-                .then(response => {
-                    this.WeatherList = response.data;
-                });
         },
         filters: {
             dateFormat: function (value, myFormat) {
@@ -76,26 +53,59 @@
         },
         methods: {        
             GetAuth() {
-                $.ajax({
-                    url: authUrl,
-                    type: 'GET',
-                    success: function (obj, textStatus, xhr) {   
-                        window.localStorage.setItem("token", obj.access_token); 
-                        window.localStorage.setItem("refreshtoken", obj.refresh_token); 
-                        alert('驗證完成');
-                    },
-                    error: function (xhr, textStatus, errorThrown) {
-                        var jsonResponse = JSON.parse(xhr.responseText);
-                        var errors = jsonResponse.errors;
-                        alert(errors[0]);
-                    }
+                baseInstance.get(authUrl)
+                .then(response => {
+                    //console.log(response);
+                    window.localStorage.setItem("token", response.data.access_token); 
+                    window.localStorage.setItem("refreshtoken", response.data.refresh_token); 
+                    alert('驗證完成');
+
+                    window.location.reload();
                 });
+                //$.ajax({
+                //    url: authUrl,
+                //    type: 'GET',
+                //    success: function (obj, textStatus, xhr) {   
+                //        window.localStorage.setItem("token", obj.access_token); 
+                //        window.localStorage.setItem("refreshtoken", obj.refresh_token); 
+                //        alert('驗證完成');
+                //    },
+                //    error: function (xhr, textStatus, errorThrown) {
+                //        var jsonResponse = JSON.parse(xhr.responseText);
+                //        var errors = jsonResponse.errors;
+                //        alert(errors[0]);
+                //    }
+                //});
             },
             CheckAuth() {
                 var data = { 
                     "Token": window.localStorage.getItem("token"),
                     "RefreshToken": window.localStorage.getItem("refreshtoken")
                 };
+
+                baseInstance.post(apiCheck, data)
+                .then( (response) => {
+                    window.localStorage.setItem("token", response.data.access_token); 
+                    window.localStorage.setItem("refreshtoken", response.data.refresh_token); 
+                    alert('重新驗證完成'); 
+                    
+                    window.location.reload();
+                })
+                .catch(function (error) {
+
+                    if (error.response) {
+                      // Request made and server responded
+                      var statusCode = error.response.status;
+                      if(statusCode == 401){
+                        var errors = error.response.data.errors;
+                        alert('Error happened: ' + errors[0]);
+                      }else{
+                        console.log(error.response.data.errors);
+                      }                      
+                    } 
+
+                });
+                /*
                 $.ajax({
                     type: "POST",
                     url: apiCheck,
@@ -106,9 +116,9 @@
                     contentType : 'application/json;',
                     statusCode: {
                         401: function(xhr, status, error) {
-                             var jsonResponse = JSON.parse(xhr.responseText);
-                             var errors = jsonResponse.errors;
-                             alert('Error happened: ' + errors[0]);
+                                var jsonResponse = JSON.parse(xhr.responseText);
+                                var errors = jsonResponse.errors;
+                                alert('Error happened: ' + errors[0]);
                         }
                     }
                 }).done(function( obj ) {
@@ -116,10 +126,9 @@
                     window.localStorage.setItem("refreshtoken", obj.refresh_token); 
                     alert('重新驗證完成');                   
                 }).fail(function(xhr, status, error) {
-                     //var jsonResponse = JSON.parse(xhr.responseText);
-                     //var errors = jsonResponse.errors;
-                     //alert(errors[0]);
-                });               
+
+                });  
+                */
             },
             PageReload(){
                 window.location.reload();
