--- a/slnAllShow/prjAllShow.Backend/Views/Shared/_Layout.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Shared/_Layout.cshtml
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="~/vendor/bootstrap-vue/dist/bootstrap-vue.min.css" /> 
     <script src="~/vendor/jquery/dist/jquery.js"></script>
     <script src="~/vendor/bootstrap/dist/js/bootstrap.js"></script>  
-    <script src="~/vendor/vue/dist/vue.js"></script>
-    <script src="~/vendor/bootstrap-vue/dist/bootstrap-vue.min.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
+    @*<script src="~/vendor/vue/dist/vue.js"></script>
+    <script src="~/vendor/bootstrap-vue/dist/bootstrap-vue.min.js"></script>*@
     <script src="~/vendor/axios/dist/axios.js"></script>
     <script>
         const defaultOptions = {
