--- a/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
@@ -68,8 +68,8 @@
                 baseInstance.get(authUrl)
                 .then(response => {
                     //console.log(response);
-                    window.localStorage.setItem("token", response.data.access_token); 
-                    window.localStorage.setItem("refreshtoken", response.data.refresh_token); 
+                    window.localStorage.setItem("token", "none"/*response.data.access_token*/); 
+                    window.localStorage.setItem("refreshtoken", "none"/*response.data.refresh_token*/); 
                     alert('驗證完成');
 
                     window.location.reload();
@@ -97,8 +97,8 @@
 
                 baseInstance.post(apiCheck, data)
                 .then( (response) => {
-                    window.localStorage.setItem("token", response.data.access_token); 
-                    window.localStorage.setItem("refreshtoken", response.data.refresh_token); 
+                    //window.localStorage.setItem("token", response.data.access_token); 
+                    //window.localStorage.setItem("refreshtoken", response.data.refresh_token); 
                     alert('重新驗證完成'); 
                     
                     window.location.reload();
