傳輸的帳密再經過AES處理，取得天氣的資料改由backend.WAPI

--- a/slnAllShow/prjAllShow.Backend/Views/Shared/_Layout.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Shared/_Layout.cshtml
@@ -54,14 +54,14 @@
                     config.headers.post['RequestVerificationToken'] = $('input:hidden[name="__RequestVerificationToken"]').val();
                     @if (SignInManager.IsSignedIn(User))
                     {
-                        if (!Context.Request.Cookies.TryGetValue("AccessToken", out string Token))
-                        {
-                            Token = "null";
-                        }
-                        <text>
-                            const token = '@Token';//window.localStorage.getItem("token");
-                            config.headers.Authorization =  token ? `Bearer ${token}` : '';
-                        </text>                       
+                        //if (!Context.Request.Cookies.TryGetValue("AccessToken", out string Token))
+                        //{
+                        //    Token = "null";
+                        //}
+                        //<text>
+                        //    const token = '@Token';//window.localStorage.getItem("token");
+                        //    config.headers.Authorization =  token ? `Bearer ${token}` : '';
+                        //</text>                       
                     }
                     return config;
                 });
