--- a/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Test/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Test WeatherForecast</h1>
 
 <div id="app">
-    <button v-on:click="GetAuth()" class="btn btn-warning">驗證</button>
+    @*<button v-on:click="GetAuth()" class="btn btn-warning">驗證</button>*@
     <button v-on:click="CheckAuth()" class="btn btn-primary">重新檢查</button>
     <button v-on:click="PageReload()" class="btn btn-info">重新整理</button>   
     <table class="table table-hover">
