--- a/slnAllShow/prjAllShow.Backend/Views/Shared/_LayoutFactory.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Shared/_LayoutFactory.cshtml
@@ -1,4 +1,7 @@
 ﻿@inject IHtmlLocalizer<SharedResources> _localizer
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<ApplicationUser> SignInManager
 
 <!DOCTYPE html>
 
@@ -14,11 +17,8 @@
     @*<script src="~/vendor/vue/dist/vue.js"></script>
     <script src="~/vendor/bootstrap-vue/dist/bootstrap-vue.min.js"></script>*@
     <script src="~/vendor/axios/dist/axios.js"></script>
-    <script>
-        var baseInstance = axios.create({
-            baseURL: window.location.origin
-        });
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="~/scripts/Shared.js"></Script>
 </head>
 <body>
     <header>
@@ -38,6 +38,35 @@
 
     <div class="container mt-3">
         <main role="main" class="pb-3">
+            <form method="post">
+                <!-- form markup -->
+            </form>
+            <script>
+                const defaultOptions = {
+                        baseURL: window.location.origin,
+                        headers: {
+                          'Content-Type': 'application/json'
+                        },
+                    };
+                var baseInstance = axios.create(defaultOptions);
+                //axios 設定
+                baseInstance.interceptors.request.use(function (config) {
+                    config.headers.post['RequestVerificationToken'] = $('input:hidden[name="__RequestVerificationToken"]').val();
+                    //const token = window.localStorage.getItem("token");
+                    //config.headers.Authorization =  token ? `Bearer ${token}` : '';                     
+
+                    return config;
+                });
+            </script>
+            <script>
+                //檢查是否刷新token
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <text>
+                        checktoken();
+                    </text>
+                }
+            </script>
             @RenderBody()
         </main>
     </div>
