--- a/slnAllShow/prjAllShow.Backend/Views/Shared/_Layout.cshtml
+++ b/slnAllShow/prjAllShow.Backend/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <script src="~/vendor/bootstrap-vue/dist/bootstrap-vue.min.js"></script>*@
     <script src="~/vendor/axios/dist/axios.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="~/scripts/Shared.js"></Script>
+    <script src="~/scripts/Shared.js"></script>
 </head>
 <body>
     <header>
